Fix flicker

--- a/style/main.css
+++ b/style/main.css
@@ -595,7 +595,9 @@ hr {
     -webkit-perspective: 1000px;
     -moz-perspective: 1000px;
     -o-perspective: 1000px;
-    perspective: 1000px; }
+    perspective: 1000px;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden; }
 
   .score-container, .best-container {
     margin-top: 0;
